--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-.App {
-  text-align: center;
+.App{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -24,15 +18,23 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logoHolder {  
+  width:50px ; 
+  height: 50px; 
+  padding: 5px;
 }
+.App-link { color: #61dafb;}
+.headerContent { text-align: left;}
+.font-16 { font-size: 16px;}
+.font-20 { font-size: 20px;}
+.font-24 { font-size: 24px;}
+.font-36 { font-size: 36px;}
+.font-48 { font-size: 48px;}
+.bold { font-weight: 700; }
+.text-center{ text-align: center;}
+.text-left{ text-align: left;}
+.text-right{ text-align: right;}
+.text-white { color: whitesmoke;}
+.site-layout-background { background: #fff;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
