--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.body {
+  padding: 0 24px 24px;
+}
 .logoHolder {  
   width:50px ; 
   height: 50px; 
