--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
 .App{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
+  font-size: 2vw;
 }
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.content{
+  padding: 24;
+  margin: 0,
 }
 .body {
   padding: 0 24px 24px;
@@ -39,4 +28,7 @@
 .text-white { color: whitesmoke;}
 .site-layout-background { background: #fff;}
 
-
+#chart {
+  max-width: 1260px;
+  margin: 0 auto;
+}
